--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -499,4 +499,128 @@ body {
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+.c-testimonials-section-container {
+  background-color: #fff;
+  padding: 50px 15px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.c-testimonials-section-container .c-testimonials-container {
+  padding: 20px 15px;
+  border-radius: 5px;
+  position: relative;
+}
+.c-testimonials-section-container .c-testimonials-container .c-testimonials-heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.c-testimonials-section-container .c-testimonials-container .c-testimonials-heading h1 {
+  width: -moz-fit-content;
+  width: fit-content;
+  font-size: 3rem;
+  font-family: poppins;
+  font-weight: 800;
+  text-transform: capitalize;
+  letter-spacing: 0px;
+  color: #008036;
+  text-align: center;
+  margin-bottom: 5px;
+  position: relative;
+  z-index: 1;
+}
+@media (max-width: 768px) {
+  .c-testimonials-section-container .c-testimonials-container .c-testimonials-heading h1 {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+}
+@media (max-width: 425px) {
+  .c-testimonials-section-container .c-testimonials-container .c-testimonials-heading h1 {
+    font-size: 1.7rem;
+    text-align: center;
+  }
+}
+.c-testimonials-section-container .c-testimonials-container .c-testimonials-heading p {
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: poppins;
+  line-height: 25px;
+  text-transform: capitalize;
+  color: #65B286;
+  margin-top: -10px;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .c-testimonials-section-container .c-testimonials-container .c-testimonials-heading p {
+    text-align: center;
+  }
+}
+@media (max-width: 425px) {
+  .c-testimonials-section-container .c-testimonials-container .c-testimonials-heading p {
+    font-size: 1rem;
+  }
+}
+.c-testimonials-section-container .c-testimonials-container .c-testimonials-card-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.c-testimonials-section-container .c-testimonials-container .c-testimonials-card-container .c-testimonials-card {
+  width: 50%;
+  border: 1px solid #008036;
+  padding: 10px 50px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media (max-width: 1024px) {
+  .c-testimonials-section-container .c-testimonials-container .c-testimonials-card-container .c-testimonials-card {
+    width: 75%;
+  }
+}
+@media (max-width: 768px) {
+  .c-testimonials-section-container .c-testimonials-container .c-testimonials-card-container .c-testimonials-card {
+    width: 100%;
+  }
+}
+@media (max-width: 425px) {
+  .c-testimonials-section-container .c-testimonials-container .c-testimonials-card-container .c-testimonials-card {
+    width: 100%;
+    padding: 10px 10px;
+  }
+}
+.c-testimonials-section-container .c-testimonials-container .c-testimonials-card-container .c-testimonials-card .c-user-image {
+  height: 150px;
+  aspect-ratio: 1/1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  border: 5px solid #008036;
+  border-radius: 50%;
+}
+.c-testimonials-section-container .c-testimonials-container .c-testimonials-card-container .c-testimonials-card .c-user-review-text {
+  text-align: center;
+  margin: 20px 0;
+  font-family: poppins;
+  font-size: 1rem;
+}
+.c-testimonials-section-container .c-testimonials-container .c-testimonials-card-container .c-testimonials-card .c-user-name {
+  text-align: center;
+  font-family: poppins;
+  font-weight: 600;
+  font-size: 1.5rem;
+  margin: 0;
+}
+.c-testimonials-section-container .c-testimonials-container .c-testimonials-card-container .c-testimonials-card .c-user-location {
+  text-align: center;
+  font-family: poppins;
+  font-weight: 400;
+  font-size: 1rem;
+  margin: 0;
 }/*# sourceMappingURL=style.css.map */
