--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -561,3 +561,133 @@ body{
     }    
 }
 
+// code for testimonials
+.c-testimonials-section-container {
+    background-color: $white;
+    padding: 50px 15px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+    .c-testimonials-container {
+        // background-color: $white;
+        padding: 20px 15px;
+        border-radius: 5px;
+        position: relative;
+
+        .c-testimonials-heading {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+
+            h1 {
+                width: fit-content;
+                font-size: 3rem;
+                font-family: poppins;
+                font-weight: 800;
+                text-transform: capitalize;
+                letter-spacing: 0px;
+                color: $primary;
+                text-align: center;
+                margin-bottom: 5px;
+                position: relative;
+                z-index: 1;
+    
+                @media (max-width: $tablet-breakdown) {
+                    font-size: 2.5rem;
+                    text-align: center;
+                }
+    
+                @media (max-width: $mobile-breakdown) {
+                    font-size: 1.7rem;
+                    text-align: center;
+                }
+            }
+    
+            p {
+                font-size: 1rem;
+                font-weight: 500;
+                font-family: poppins;
+                line-height: 25px;
+                text-transform: capitalize;
+                color: $primary-light;
+                margin-top: -10px;
+                text-align: center;
+    
+                @media (max-width: $tablet-breakdown) {
+                    text-align: center;
+                }
+    
+                @media (max-width: $mobile-breakdown) {
+                    font-size: 1rem;
+                }
+            }
+        }
+
+        .c-testimonials-card-container {
+            width: 100%;
+            // border: 1px solid red;
+            display: flex;
+            justify-content: center;
+
+            .c-testimonials-card {
+                width: 50%;
+                border: 1px solid $primary;
+                padding: 10px 50px;
+                border-radius: 5px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                @media (max-width: $laptop-breakdown) {
+                    width: 75%;
+                }
+
+                @media (max-width: $tablet-breakdown) {
+                    width: 100%;
+                }
+
+                @media (max-width: $mobile-breakdown) {
+                    width: 100%;
+                    padding: 10px 10px;
+
+                }
+
+                .c-user-image {
+                    height: 150px;
+                    aspect-ratio: 1/1;
+                    object-fit: cover;
+                    object-position: center;
+                    border: 5px solid $primary;
+                    border-radius: 50%;
+                }
+
+                .c-user-review-text {
+                    text-align: center;
+                    margin: 20px 0;
+                    font-family: poppins;
+                    font-size: 1rem;
+                }
+
+                .c-user-name {
+                    text-align: center;
+                    font-family: poppins;
+                    font-weight: 600;
+                    font-size: 1.5rem;
+                    margin: 0;
+                }
+
+                .c-user-location {
+                    text-align: center;
+                    font-family: poppins;
+                    font-weight: 400;
+                    font-size: 1rem;
+                    margin: 0;
+                }
+            }
+        }
+
+    }    
+}
+
