--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,11 @@ body {
   background-color: #f3f4f6;
 }
 
+a {
+  text-decoration: none;
+  color: #008036;
+}
+
 .c-header-container {
   width: 100%;
   height: 75px;
@@ -623,4 +628,150 @@ body {
   font-weight: 400;
   font-size: 1rem;
   margin: 0;
+}
+
+.c-blog-section-container {
+  background-color: #65B286;
+  padding: 50px 15px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.c-blog-section-container .c-blog-container {
+  padding: 20px 15px;
+  border-radius: 5px;
+  position: relative;
+}
+@media (max-width: 425px) {
+  .c-blog-section-container .c-blog-container {
+    padding: 20px 0px;
+  }
+}
+.c-blog-section-container .c-blog-container .c-blog-heading {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.c-blog-section-container .c-blog-container .c-blog-heading p {
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: poppins;
+  text-transform: capitalize;
+  color: rgb(236, 236, 236);
+  margin: 10px 0;
+  text-align: center;
+}
+@media (max-width: 1024px) {
+  .c-blog-section-container .c-blog-container .c-blog-heading p {
+    text-align: center;
+    margin: 15px 0;
+  }
+}
+@media (max-width: 768px) {
+  .c-blog-section-container .c-blog-container .c-blog-heading p {
+    text-align: center;
+    margin: 10px 0;
+  }
+}
+@media (max-width: 425px) {
+  .c-blog-section-container .c-blog-container .c-blog-heading p {
+    font-size: 1rem;
+    margin: 5px 0;
+  }
+}
+.c-blog-section-container .c-blog-container .c-blog-heading h1 {
+  width: -moz-fit-content;
+  width: fit-content;
+  font-size: 3rem;
+  font-family: poppins;
+  font-weight: 800;
+  text-transform: capitalize;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 50px;
+  position: relative;
+  z-index: 1;
+  line-height: 25px;
+}
+@media (max-width: 768px) {
+  .c-blog-section-container .c-blog-container .c-blog-heading h1 {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+}
+@media (max-width: 425px) {
+  .c-blog-section-container .c-blog-container .c-blog-heading h1 {
+    font-size: 1.7rem;
+    text-align: center;
+  }
+}
+.c-blog-section-container .c-blog-container .c-blog-card-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  row-gap: 30px;
+}
+.c-blog-section-container .c-blog-container .c-blog-card-container .c-blog-card {
+  width: 30%;
+  border: 1px solid #008036;
+  background-color: #fff;
+  padding: 10px 10px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+@media (max-width: 1024px) {
+  .c-blog-section-container .c-blog-container .c-blog-card-container .c-blog-card {
+    width: 75%;
+  }
+}
+@media (max-width: 768px) {
+  .c-blog-section-container .c-blog-container .c-blog-card-container .c-blog-card {
+    width: 100%;
+  }
+}
+@media (max-width: 425px) {
+  .c-blog-section-container .c-blog-container .c-blog-card-container .c-blog-card {
+    width: 100%;
+    padding: 10px 10px;
+  }
+}
+.c-blog-section-container .c-blog-container .c-blog-card-container .c-blog-card .c-blog-image {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  border-radius: 5px;
+}
+.c-blog-section-container .c-blog-container .c-blog-card-container .c-blog-card .c-blog-name {
+  text-align: left;
+  font-family: poppins;
+  font-weight: 600;
+  font-size: 1.2rem;
+  margin: 10px 0;
+  color: #052041;
+}
+.c-blog-section-container .c-blog-container .c-blog-card-container .c-blog-card .c-blog-desc {
+  text-align: left;
+  margin: 0 0;
+  font-family: poppins;
+  font-size: 1rem;
+  color: #052041;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* number of lines to show */
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+}
+.c-blog-section-container .c-blog-container .c-blog-card-container .c-blog-card .c-blog-date {
+  text-align: left;
+  font-family: poppins;
+  font-weight: 400;
+  font-size: 1rem;
+  margin: 10px 0;
+  color: #656565;
 }/*# sourceMappingURL=style.css.map */
