--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,11 @@ body{
     background-color: #f3f4f6;
 }
 
+a {
+    text-decoration: none;
+    color: $primary;
+}
+
 // code for header 
 .c-header-container
 {
@@ -639,6 +644,10 @@ body{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
+                // background-image: url(../images/testimonials/leaf.png);
+                // background-position: top left;
+                // background-repeat: no-repeat;
+                // background-size: auto;
 
                 @media (max-width: $laptop-breakdown) {
                     width: 75%;
@@ -684,6 +693,174 @@ body{
                     font-weight: 400;
                     font-size: 1rem;
                     margin: 0;
+                }
+            }
+        }
+
+    }    
+}
+
+// code for blog
+.c-blog-section-container {
+    background-color: $primary-light;
+    padding: 50px 15px;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+    .c-blog-container {
+        // background-color: $white;
+        padding: 20px 15px;
+        border-radius: 5px;
+        position: relative;
+
+        @media (max-width: $mobile-breakdown) {
+            padding: 20px 0px;
+
+        }
+
+        .c-blog-heading {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            p {
+                font-size: 1rem;
+                font-weight: 500;
+                font-family: poppins;
+                text-transform: capitalize;
+                color: $gray;
+                margin: 10px 0;
+                text-align: center;
+    
+                @media (max-width: $laptop-breakdown) {
+                    text-align: center;
+                    margin: 15px 0;
+                }
+
+                @media (max-width: $tablet-breakdown) {
+                    text-align: center;
+                    margin: 10px 0;
+                }
+    
+                @media (max-width: $mobile-breakdown) {
+                    font-size: 1rem;
+                    margin: 5px 0;
+                }
+            }
+
+            h1 {
+                width: fit-content;
+                font-size: 3rem;
+                font-family: poppins;
+                font-weight: 800;
+                text-transform: capitalize;
+                color: $white;
+                text-align: center;
+                margin-bottom: 50px;
+                position: relative;
+                z-index: 1;
+                line-height: 25px;
+
+    
+                @media (max-width: $tablet-breakdown) {
+                    font-size: 2.5rem;
+                    text-align: center;
+                }
+    
+                @media (max-width: $mobile-breakdown) {
+                    font-size: 1.7rem;
+                    text-align: center;
+                }
+            }
+    
+            
+        }
+
+        .c-blog-card-container {
+            width: 100%;
+            // border: 1px solid red;
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            row-gap: 30px;
+
+
+            .c-blog-card {
+                width: 30%;
+                border: 1px solid $primary;
+                background-color: $white;
+                padding: 10px 10px;
+                border-radius: 5px;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                // background-image: url(../images/testimonials/leaf.png);
+                // background-position: top left;
+                // background-repeat: no-repeat;
+                // background-size: auto;
+
+                @media (max-width: $laptop-breakdown) {
+                    width: 75%;
+                }
+
+                @media (max-width: $tablet-breakdown) {
+                    width: 100%;
+                }
+
+                @media (max-width: $mobile-breakdown) {
+                    width: 100%;
+                    padding: 10px 10px;
+
+                }
+
+                .c-blog-image {
+                    width: 100%;
+                    height: auto;
+                    object-fit: cover;
+                    object-position: center;
+                    // border: 5px solid $primary;
+                    border-radius: 5px;
+                }
+
+                .c-blog-name {
+                    text-align: left;
+                    font-family: poppins;
+                    font-weight: 600;
+                    font-size: 1.2rem;
+                    margin: 10px 0;
+
+                    // overflow: hidden;
+                    // display: -webkit-box;
+                    // -webkit-line-clamp: 2; /* number of lines to show */
+                    // -webkit-box-orient: vertical;
+                    // text-overflow: ellipsis;
+                    color: $secondary;
+
+                }
+
+                .c-blog-desc {
+                    text-align: left;
+                    margin: 0 0;
+                    font-family: poppins;
+                    font-size: 1rem;
+                    color: $secondary;
+
+                    overflow: hidden;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3; /* number of lines to show */
+                    -webkit-box-orient: vertical;
+                    text-overflow: ellipsis;
+                }
+
+
+                .c-blog-date {
+                    text-align: left;
+                    font-family: poppins;
+                    font-weight: 400;
+                    font-size: 1rem;
+                    margin: 10px 0;
+                    color: #656565;
                 }
             }
         }
