--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -774,4 +774,99 @@ a {
   font-size: 1rem;
   margin: 10px 0;
   color: #656565;
+}
+
+.c-about-page-section-container {
+  background-image: linear-gradient(90deg, #008036, #65B286);
+  padding: 50px 10px;
+}
+.c-about-page-section-container .c-about-page-container {
+  background-color: #fff;
+  padding: 20px 15px;
+  border-radius: 5px;
+}
+.c-about-page-section-container .c-about-page-container .c-about-page-content .c-about-page-heading h1 {
+  font-size: 2.5rem;
+  font-weight: 800;
+  text-transform: capitalize;
+  letter-spacing: 0px;
+  color: #052041;
+  text-align: left;
+  margin-bottom: 20px;
+}
+@media (max-width: 768px) {
+  .c-about-page-section-container .c-about-page-container .c-about-page-content .c-about-page-heading h1 {
+    font-size: 2.2rem;
+    text-align: left;
+    margin: 10px 0;
+  }
+}
+@media (max-width: 425px) {
+  .c-about-page-section-container .c-about-page-container .c-about-page-content .c-about-page-heading h1 {
+    font-size: 1.7rem;
+    text-align: left;
+  }
+}
+.c-about-page-section-container .c-about-page-container .c-about-page-content .c-about-page-heading p {
+  font-size: 1.2rem;
+  font-weight: 500;
+  line-height: 25px;
+  text-transform: capitalize;
+  color: #052041;
+  margin-top: -10px;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .c-about-page-section-container .c-about-page-container .c-about-page-content .c-about-page-heading p {
+    text-align: center;
+  }
+}
+@media (max-width: 425px) {
+  .c-about-page-section-container .c-about-page-container .c-about-page-content .c-about-page-heading p {
+    font-size: 1rem;
+  }
+}
+.c-about-page-section-container .c-about-page-container .c-about-page-content .img-1 {
+  width: 50%;
+  float: left;
+  margin: 0;
+  margin-right: 20px;
+  border-radius: 5px;
+}
+@media (max-width: 768px) {
+  .c-about-page-section-container .c-about-page-container .c-about-page-content .img-1 {
+    width: 100%;
+    float: unset;
+    margin: 0;
+  }
+}
+.c-about-page-section-container .c-about-page-container .c-about-page-content .img-2 {
+  width: 50%;
+  float: right;
+  margin: 0;
+  margin-left: 20px;
+  border-radius: 5px;
+}
+@media (max-width: 768px) {
+  .c-about-page-section-container .c-about-page-container .c-about-page-content .img-2 {
+    width: 100%;
+    float: unset;
+    margin: 10px 0;
+  }
+}
+.c-about-page-section-container .c-about-page-container .c-about-page-content p {
+  color: #052041;
+  font-size: 1.1rem;
+  font-family: poppins;
+  line-height: 1.9rem;
+  text-align: justify;
+  margin-bottom: 20px;
+  font-weight: 400;
+}
+@media (max-width: 425px) {
+  .c-about-page-section-container .c-about-page-container .c-about-page-content p {
+    font-size: 1rem;
+    line-height: 1.7rem;
+    text-align: left;
+  }
 }/*# sourceMappingURL=style.css.map */
