--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -868,3 +868,114 @@ a {
     }    
 }
 
+
+// █████╗ ██████╗  ██████╗ ██╗   ██╗████████╗    ██╗   ██╗███████╗
+// ██╔══██╗██╔══██╗██╔═══██╗██║   ██║╚══██╔══╝    ██║   ██║██╔════╝
+// ███████║██████╔╝██║   ██║██║   ██║   ██║       ██║   ██║███████╗
+// ██╔══██║██╔══██╗██║   ██║██║   ██║   ██║       ██║   ██║╚════██║
+// ██║  ██║██████╔╝╚██████╔╝╚██████╔╝   ██║       ╚██████╔╝███████║
+// ╚═╝  ╚═╝╚═════╝  ╚═════╝  ╚═════╝    ╚═╝        ╚═════╝ ╚══════╝
+                                                                
+// code for welcome 
+.c-about-page-section-container {
+    background-image: linear-gradient(90deg, $primary, $primary-light);
+    padding: 50px 10px;
+
+    .c-about-page-container {
+        background-color: $white;
+        padding: 20px 15px;
+        border-radius: 5px;
+
+        
+        .c-about-page-content {
+
+            .c-about-page-heading {
+
+                h1 {
+                    font-size: 2.5rem;
+                    font-weight: 800;
+                    text-transform: capitalize;
+                    letter-spacing: 0px;
+                    color: $secondary;
+                    text-align: left;
+                    margin-bottom: 20px;
+        
+                    @media (max-width: $tablet-breakdown) {
+                        font-size: 2.2rem;
+                        text-align: left;
+                        margin: 10px 0;
+                    }
+        
+                    @media (max-width: $mobile-breakdown) {
+                        font-size: 1.7rem;
+                        text-align: left;
+                    }
+                }
+        
+                p {
+                    font-size: 1.2rem;
+                    font-weight: 500;
+                    line-height: 25px;
+                    text-transform: capitalize;
+                    color: $secondary;
+                    margin-top: -10px;
+                    text-align: center;
+        
+                    @media (max-width: $tablet-breakdown) {
+                        text-align: center;
+                    }
+        
+                    @media (max-width: $mobile-breakdown) {
+                        font-size: 1rem;
+                    }
+                }
+            }
+    
+
+            .img-1 {
+                width: 50%;
+                float: left;
+                margin: 0;
+                margin-right: 20px;
+                border-radius: 5px;
+
+                @media (max-width: $tablet-breakdown) {
+                    width: 100%;
+                    float: unset;
+                    margin: 0;
+                }
+            }
+            .img-2 {
+                width: 50%;
+                float: right;
+                margin: 0;
+                margin-left: 20px;
+                border-radius: 5px;
+
+                @media (max-width: $tablet-breakdown) {
+                    width: 100%;
+                    float: unset;
+                    margin: 10px 0;
+                }
+            }
+
+            p {
+                color: $secondary;
+                font-size: 1.1rem;
+                font-family: poppins;
+                line-height: 1.9rem;
+                // word-spacing: 1px;
+                text-align: justify;
+                margin-bottom: 20px;
+                font-weight: 400;
+
+                @media (max-width: $mobile-breakdown) {
+                    font-size: 1rem;
+                    line-height: 1.7rem;
+                    text-align: left;
+                }
+            }
+        }
+
+    }    
+}
