--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -724,7 +724,7 @@ a {
 }
 @media (max-width: 1024px) {
   .c-blog-section-container .c-blog-container .c-blog-card-container .c-blog-card {
-    width: 75%;
+    width: 45%;
   }
 }
 @media (max-width: 768px) {
@@ -869,4 +869,163 @@ a {
     line-height: 1.7rem;
     text-align: left;
   }
+}
+
+.c-our-services-section-container {
+  background-color: #fff;
+  padding: 50px 10px;
+}
+.c-our-services-section-container .c-our-services-container {
+  background-color: #fff;
+  padding: 0;
+  border-radius: 5px;
+}
+.c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-heading h1 {
+  font-size: 2.5rem;
+  font-weight: 800;
+  text-transform: capitalize;
+  letter-spacing: 0px;
+  color: #052041;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-heading h1 {
+    font-size: 2.2rem;
+    text-align: center;
+    margin: 10px 0;
+  }
+}
+@media (max-width: 425px) {
+  .c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-heading h1 {
+    font-size: 1.7rem;
+    text-align: center;
+  }
+}
+.c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-heading p {
+  font-size: 1.2rem;
+  font-weight: 500;
+  line-height: 25px;
+  text-transform: capitalize;
+  color: #052041;
+  margin-top: -10px;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-heading p {
+    text-align: center;
+  }
+}
+@media (max-width: 425px) {
+  .c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-heading p {
+    font-size: 1rem;
+  }
+}
+.c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container {
+  width: 100%;
+}
+.c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-background-container {
+  width: 100%;
+}
+.c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-background-container .c-our-services-background {
+  width: 100%;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  border-radius: 10px;
+}
+@media (max-width: 425px) {
+  .c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-background-container .c-our-services-background {
+    height: 150px;
+  }
+}
+.c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-card-group-container {
+  margin-top: -100px;
+  padding: 0 20px;
+}
+@media (max-width: 425px) {
+  .c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-card-group-container {
+    margin-top: -75px;
+    padding: 0 10px;
+  }
+}
+.c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-card-group-container .c-our-services-card-container {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  row-gap: 30px;
+}
+.c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-card-group-container .c-our-services-card-container .c-service-card {
+  width: 30%;
+  border: 1px solid #008036;
+  background-color: #fff;
+  padding: 10px 10px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+@media (max-width: 1024px) {
+  .c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-card-group-container .c-our-services-card-container .c-service-card {
+    width: 45%;
+  }
+}
+@media (max-width: 768px) {
+  .c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-card-group-container .c-our-services-card-container .c-service-card {
+    width: 100%;
+  }
+}
+@media (max-width: 425px) {
+  .c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-card-group-container .c-our-services-card-container .c-service-card {
+    width: 100%;
+    padding: 10px 10px;
+  }
+}
+.c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-card-group-container .c-our-services-card-container .c-service-card:hover .c-service-image {
+  border-bottom-left-radius: 100px;
+  border-top-right-radius: 100px;
+}
+.c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-card-group-container .c-our-services-card-container .c-service-card .c-service-image {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  border-radius: 5px;
+  transition: all 0.3s ease-in;
+}
+.c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-card-group-container .c-our-services-card-container .c-service-card .c-service-name {
+  text-align: center;
+  font-family: poppins;
+  font-weight: 600;
+  font-size: 1.2rem;
+  margin: 10px 0;
+  color: #052041;
+}
+.c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-card-group-container .c-our-services-card-container .c-service-card .c-service-desc {
+  text-align: center;
+  margin: 0 0;
+  margin-bottom: 20px;
+  font-family: poppins;
+  font-size: 1rem;
+  color: #052041;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* number of lines to show */
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+}
+.c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-card-group-container .c-our-services-card-container .c-service-card .c-book-service-btn {
+  border: 1px solid #008036;
+  padding: 5px 20px;
+  background-color: #008036;
+  color: #fff;
+  margin: 0 auto;
+  transition: all 0.3s ease-in;
+}
+.c-our-services-section-container .c-our-services-container .c-our-services-content .c-our-services-card-container .c-our-services-card-group-container .c-our-services-card-container .c-service-card .c-book-service-btn:hover {
+  border-radius: 20px;
 }/*# sourceMappingURL=style.css.map */
