--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -801,7 +801,7 @@ a {
                 // background-size: auto;
 
                 @media (max-width: $laptop-breakdown) {
-                    width: 75%;
+                    width: 45%;
                 }
 
                 @media (max-width: $tablet-breakdown) {
@@ -975,6 +975,208 @@ a {
                     text-align: left;
                 }
             }
+        }
+
+    }    
+}
+
+
+//  ██████╗ ██╗   ██╗██████╗     ███████╗███████╗██████╗ ██╗   ██╗██╗ ██████╗███████╗███████╗
+// ██╔═══██╗██║   ██║██╔══██╗    ██╔════╝██╔════╝██╔══██╗██║   ██║██║██╔════╝██╔════╝██╔════╝
+// ██║   ██║██║   ██║██████╔╝    ███████╗█████╗  ██████╔╝██║   ██║██║██║     █████╗  ███████╗
+// ██║   ██║██║   ██║██╔══██╗    ╚════██║██╔══╝  ██╔══██╗╚██╗ ██╔╝██║██║     ██╔══╝  ╚════██║
+// ╚██████╔╝╚██████╔╝██║  ██║    ███████║███████╗██║  ██║ ╚████╔╝ ██║╚██████╗███████╗███████║
+//  ╚═════╝  ╚═════╝ ╚═╝  ╚═╝    ╚══════╝╚══════╝╚═╝  ╚═╝  ╚═══╝  ╚═╝ ╚═════╝╚══════╝╚══════╝
+                                                                                          
+// code for welcome 
+.c-our-services-section-container {
+    background-color: $white;
+    padding: 50px 10px;
+
+    .c-our-services-container {
+        background-color: $white;
+        // padding: 20px 15px;
+        padding: 0;
+        border-radius: 5px;
+        // border: 1px solid red;
+
+        
+        .c-our-services-content {
+
+            .c-our-services-heading {
+
+                h1 {
+                    font-size: 2.5rem;
+                    font-weight: 800;
+                    text-transform: capitalize;
+                    letter-spacing: 0px;
+                    color: $secondary;
+                    text-align: center;
+                    // margin-bottom: 20px;
+        
+                    @media (max-width: $tablet-breakdown) {
+                        font-size: 2.2rem;
+                        text-align: center;
+                        margin: 10px 0;
+                    }
+        
+                    @media (max-width: $mobile-breakdown) {
+                        font-size: 1.7rem;
+                        text-align: center;
+                    }
+                }
+        
+                p {
+                    font-size: 1.2rem;
+                    font-weight: 500;
+                    line-height: 25px;
+                    text-transform: capitalize;
+                    color: $secondary;
+                    margin-top: -10px;
+                    text-align: center;
+        
+                    @media (max-width: $tablet-breakdown) {
+                        text-align: center;
+                    }
+        
+                    @media (max-width: $mobile-breakdown) {
+                        font-size: 1rem;
+                    }
+                }
+            }
+
+            .c-our-services-card-container {
+                width: 100%;
+
+                .c-our-services-background-container {
+                    width: 100%;
+
+                    .c-our-services-background {
+                        width: 100%;
+                        height: 300px;
+                        object-fit: cover;
+                        object-position: center;
+                        border-radius: 10px;
+
+                        @media (max-width: $mobile-breakdown) {
+                            height: 150px;
+                        }
+                    }
+
+                }
+
+                .c-our-services-card-group-container {
+                    margin-top: -100px;
+                    padding: 0 20px;
+
+                    @media (max-width: $mobile-breakdown) {
+                        margin-top: -75px;
+                        padding: 0 10px;
+                    }
+
+                    .c-our-services-card-container {
+                        width: 100%;
+                        // border: 1px solid red;
+                        display: flex;
+                        justify-content: space-around;
+                        flex-wrap: wrap;
+                        row-gap: 30px;
+            
+            
+                        .c-service-card {
+                            width: 30%;
+                            border: 1px solid $primary;
+                            background-color: $white;
+                            padding: 10px 10px;
+                            border-radius: 5px;
+                            display: flex;
+                            flex-direction: column;
+                            align-items: flex-start;
+                            // background-image: url(../images/testimonials/leaf.png);
+                            // background-position: top left;
+                            // background-repeat: no-repeat;
+                            // background-size: auto;
+            
+                            @media (max-width: $laptop-breakdown) {
+                                width: 45%;
+                            }
+            
+                            @media (max-width: $tablet-breakdown) {
+                                width: 100%;
+                            }
+            
+                            @media (max-width: $mobile-breakdown) {
+                                width: 100%;
+                                padding: 10px 10px;
+            
+                            }
+
+                            &:hover {
+                                .c-service-image {
+                                    border-bottom-left-radius: 100px;
+                                    border-top-right-radius: 100px;
+                                }
+                            }
+            
+                            .c-service-image {
+                                width: 100%;
+                                height: auto;
+                                object-fit: cover;
+                                object-position: center;
+                                border-radius: 5px;
+                                transition: all .3s ease-in;
+
+                            }
+            
+                            .c-service-name {
+                                text-align: center;
+                                font-family: poppins;
+                                font-weight: 600;
+                                font-size: 1.2rem;
+                                margin: 10px 0;
+            
+                                // overflow: hidden;
+                                // display: -webkit-box;
+                                // -webkit-line-clamp: 2; /* number of lines to show */
+                                // -webkit-box-orient: vertical;
+                                // text-overflow: ellipsis;
+                                color: $secondary;
+            
+                            }
+            
+                            .c-service-desc {
+                                text-align: center;
+                                margin: 0 0;
+                                margin-bottom: 20px;
+                                font-family: poppins;
+                                font-size: 1rem;
+                                color: $secondary;
+            
+                                overflow: hidden;
+                                display: -webkit-box;
+                                -webkit-line-clamp: 3; /* number of lines to show */
+                                -webkit-box-orient: vertical;
+                                text-overflow: ellipsis;
+                            }
+
+                            .c-book-service-btn {
+                                border: 1px solid $primary;
+                                padding: 5px 20px;
+                                background-color: $primary;
+                                color: $white;
+                                margin: 0 auto;
+                                transition: all .3s ease-in;
+
+                                &:hover {
+                                    border-radius: 20px;
+                                }
+                            }
+
+                        }
+                    }
+                }
+            }
+    
         }
 
     }    
