--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1460,3 +1460,28 @@ a {
 
     }    
 }
+
+
+
+// ███████╗ ██████╗  ██████╗ ████████╗███████╗██████╗ 
+// ██╔════╝██╔═══██╗██╔═══██╗╚══██╔══╝██╔════╝██╔══██╗
+// █████╗  ██║   ██║██║   ██║   ██║   █████╗  ██████╔╝
+// ██╔══╝  ██║   ██║██║   ██║   ██║   ██╔══╝  ██╔══██╗
+// ██║     ╚██████╔╝╚██████╔╝   ██║   ███████╗██║  ██║
+// ╚═╝      ╚═════╝  ╚═════╝    ╚═╝   ╚══════╝╚═╝  ╚═╝
+                                                   
+
+.c-footer-container {
+    background-color: $secondary;
+    color: $white;
+    padding: 10px 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    p {
+        margin: 0;
+        padding: 0;
+    }
+}
